--- a/index.html
+++ b/index.html
@@ -15,7 +15,8 @@
 <a class="btn btn-default" href="/newslist.html">复杂列表页</a><br/>
 <a class="btn btn-default" href="/myform.html">表单页</a><br/>
 <a class="btn btn-default" href="/tmpl.html">模板维护页</a><br/>
-<a class="btn btn-default" href="/mdul.html">组件维护页</a>
+<a class="btn btn-default" href="/mdul.html">组件维护页</a><br/>
+<a class="btn btn-default" href="/tree.html">树结构导航</a>
 </p>
 <footer></footer>
 </div>
