--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 <a class="btn btn-default" href="/myform.html">表单页</a><br/>
 <a class="btn btn-default" href="/tmpl.html">模板维护页</a><br/>
 <a class="btn btn-default" href="/mdul.html">组件维护页</a><br/>
-<a class="btn btn-default" href="/tree.html">树结构导航</a>
+<a class="btn btn-default" href="/tree.html">树结构</a><br/>
+<a class="btn btn-default" href="/menu.html">菜单导航</a>
 </p>
 <footer></footer>
 </div>
